fix bugs module image-size + stories overflow + carousel dark gradient

--- a/public/carousel/style.css
+++ b/public/carousel/style.css
@@ -357,6 +357,7 @@ figure {
   flex-direction: column;
   gap: var(--gap);
   position: relative;
+  min-height: 0;
 }
 .screen .popup .details .details-body .title {
   flex: 0 0 0;
@@ -376,14 +377,13 @@ figure {
   min-height: 1.1em;
 }
 .screen .popup .details .details-body .content {
-  /* padding: 1.5em 1.75em 1.2em; */
-  /* background-color: var(--front-color);
-  box-shadow: var(--box-shadow); */
+  position: absolute;
+  width: 100%;
+  height: 100%;
   color: white;
-  flex: 1 1 0;
+  /* flex: 1 1 0; */
   overflow: auto;
   position: relative;
-  /* padding: 0 0 10em; */
 }
 .screen .popup .details .details-body .content::-webkit-scrollbar {
   width: 2px;
@@ -401,15 +401,33 @@ figure {
 .screen .popup .details .details-body .content .placeholder {
   padding: 0 0 10em;
 }
-.screen .popup .details .details-body::after {
+.screen .popup .details .details-body .content-wrap {
+  min-height: 0;
+  flex-grow: 1;
+  position: relative;
+}
+.screen .popup .details .details-body .content-wrap .gradient-bottom,
+.screen .popup .details .details-body .content-wrap .gradient-top {
   content: "";
   position: absolute;
   left: 0;
   right: 2px;
   height: 9.7917em;
+  pointer-events: none;
+  z-index: 2;
+}
+.screen .popup .details .details-body .content-wrap .gradient-top {
+  top: 0;
+  background: linear-gradient(180deg, black 0%, transparent 100%);
+  opacity: 0;
+  transition: opacity 500ms;
+}
+.screen .popup .details .details-body .content-wrap.scrolled .gradient-top {
+  opacity: 1;
+}
+.screen .popup .details .details-body .content-wrap .gradient-bottom {
   bottom: 0;
   background: linear-gradient(0deg, black 0%, transparent 100%);
-  pointer-events: none;
 }
 
 
