--- a/public/stories/style.css
+++ b/public/stories/style.css
@@ -736,14 +736,17 @@ body {
 .pagination {
   /* display: none; */
   position: absolute;
-  top: 8.8em;
+  top: 8.4em;
   left: 0;
   width: 100%;
-  height: 1.45em;
+  height: 2.25em;
+
+  overflow: hidden;
 }
 
 .pagination .pagination-thumb {
   position: absolute;
+  top: 0.4em;
   width: 1.45em;
   height: 1.45em;
   transform-origin: left center;
